# robo-reviews

./: .gitignore  Model3_Ki.ipynb  README.md  data_prep.py  main.ipynb  main_ki.ipynb  mainci .ipynb  model2.py  model3_new_ki.ipynb  pyproject.toml  review_classification_am.ipynb
data/: best_products.json  best_products.pkl  best_products_with_llm_summary.pkl  category_columns.pkl  category_columns_5.pkl  category_columns_6.pkl  embeddings_cost_dict.pkl  json_best_data.pkl  json_worst_data.pkl  sentiment_columns.pkl  worst_products.json  worst_products.pkl  worst_products_with_llm_summary.pkl
dev_scripts/: Model3ci.ipynb  main.ipynb  main_ki.ipynb  mainci .ipynb  metrics.ipynb
src/: data_prep.py  data_processing.py  main.py  metrics.ipynb  model1.py  model2.py  model3.py
