[project]
name = "automated-customer-reviews"
version = "0.1.0"
description = ""
authors = [
    {name = "Aleksa Mihajlovic",email = "mihajlovic.aleksa@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy (>=2.3.4,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "kagglehub (>=0.3.13,<0.4.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "openai (>=2.7.2,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
ipykernel = "^7.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
